temp: implement sample signup logic