@@ -1,11 +1,12 @@
 package engine.network;
 
-import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.core.JsonParser;
 import engine.Core;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import message.Ping;
 import org.reflections.Reflections;
+import org.slf4j.LoggerFactory;
 
 import java.io.*;
 import java.net.Socket;
@@ -13,18 +14,21 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 // NetworkManager 클래스
 public final class NetworkManager {
+    private static final org.slf4j.Logger log = LoggerFactory.getLogger(NetworkManager.class);
     private static NetworkManager instance;
     private Socket socket;
     private BufferedReader reader;
     private BufferedWriter writer;
     private final Logger logger = Core.getLogger();
     private ObjectMapper mapper;
-    private final ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     private final Map<String, EventHandler> eventHandlers = new HashMap<>();
     private static long latency = 0L;
 
@@ -38,7 +42,7 @@ public final class NetworkManager {
             mapper.disable(JsonGenerator.Feature.AUTO_CLOSE_TARGET);
             mapper.disable(JsonParser.Feature.AUTO_CLOSE_SOURCE);
 
-            Reflections reflections = new Reflections("engine");
+            Reflections reflections = new Reflections("message");
             for (Class<? extends Body> bodyClass : reflections.getSubTypesOf(Body.class)){
                 mapper.registerSubtypes(bodyClass);
             }
@@ -47,29 +51,8 @@ public final class NetworkManager {
                 latency = System.currentTimeMillis() - ((Ping) event.body()).sendTimestamp();
                 logger.info("Network latency: " + latency + "ms");
             });
-            executor.execute(() -> {
-                while(socket.isConnected()) {
-                    try {
-                        if (reader.ready()) {
-                            Event event = mapper.readValue(reader, Event.class);
-                            dispatch(event);
-                        }
-                    } catch (IOException e) {
-                        logger.log(Level.WARNING, "Packet receive failed", e);
-                    }
-                }
-            });
-            executor.execute(() -> {
-                while(socket.isConnected()) {
-                    sendEvent("ping", new Ping(System.currentTimeMillis()));
-                    try {
-                        Thread.sleep(3000);
-                    } catch (InterruptedException e) {
-                        logger.log(Level.WARNING, "Ping thread interrupted", e);
-                        Thread.currentThread().interrupt();
-                    }
-                }
-            });
+            executor.execute(this::listen);
+            executor.execute(this::trackLatency);
         } catch (IOException e) {
             logger.log(Level.WARNING, "Network IO Exception", e);
         }
@@ -89,6 +72,35 @@ public final class NetworkManager {
         eventHandlers.get(event.name()).handle(event);
     }
 
+    private void listen() {
+        try {
+            while(socket.isConnected()) {
+                if (reader.ready()) {
+                    Event event = mapper.readValue(reader, Event.class);
+                    if (!event.name().equals("ping"))
+                        logger.info("Received event: " + event);
+                    dispatch(event);
+                }
+            }
+        }
+        catch (IOException e) {
+            logger.log(Level.WARNING, e.getMessage(), e);
+            logger.log(Level.WARNING,"Packet receive failed", e);
+        }
+    }
+
+    private void trackLatency() {
+        while(socket.isConnected()) {
+            sendEvent("ping", new Ping(System.currentTimeMillis()));
+            try {
+                Thread.sleep(3000);
+            } catch (InterruptedException e) {
+                logger.log(Level.WARNING, "Ping thread interrupted", e);
+                Thread.currentThread().interrupt();
+            }
+        }
+    }
+
     public void registerEventHandler(String key, EventHandler handler) {
         eventHandlers.put(key, handler);
     }
@@ -98,7 +110,8 @@ public final class NetworkManager {
         executor.execute(() -> {
             try{
                 mapper.writeValue(writer, event);
-                logger.info("Event sent: " + eventName);
+                if (!eventName.equals("ping"))
+                    logger.info("Event sent: " + eventName);
             }
             catch (IOException e) {
                 logger.log(Level.WARNING, e.getMessage(), e);
@@ -107,12 +120,22 @@ public final class NetworkManager {
         });
     }
 
+    public Future<Event> request(String eventName, Body body) {
+        sendEvent(eventName, body);
+        return executor.submit(() -> {
+            AtomicReference<Event> result = new AtomicReference<>();
+            registerEventHandler(eventName, result::set);
+            while (result.get() == null);
+            return result.get();
+        });
+    }
+
     public void close() {
         try {
+            executor.shutdown();
             if (reader != null) reader.close();
             if (writer != null) writer.close();
             if (socket != null) socket.close();
-            executor.shutdown();
         } catch (IOException e) {
             logger.log(Level.WARNING, "Network IO Exception", e);
         }
